--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
     
-    <script>
-	window.pixelId = "677e1eeb0a9be4aaf3544d0e";
-	var a = document.createElement("script");
-	a.setAttribute("async", "");
-	a.setAttribute("defer", "");
-	a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
-	document.head.appendChild(a);
-  </script>
-
-<script src="js/latest.js" data-utmify-prevent-xcod-sck="" data-utmify-prevent-subids="" async="" defer=""></script>
+	<script>
+		window.pixelId = "681a1ce7dd6b870636dd0aaf";
+		var a = document.createElement("script");
+		a.setAttribute("async", "");
+		a.setAttribute("defer", "");
+		a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+		document.head.appendChild(a);
+	  
+ </script>
+ 
+<script
+src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+data-utmify-prevent-xcod-sck
+data-utmify-prevent-subids
+async
+defer
+></script>
 
 	<meta charset="UTF-8">
 		<title>Agência CrescerGram  Seguidores Reais e Brasileiros</title>
