--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div id="verification-message1" class="verification-message"></div>
   
 		<!-- Botão de Comprar Agora - Inicialmente oculto -->
-		<button id="buy-now-btn1" class="buy-now-btn" style="display: none;" onclick="window.location.href='https://pay.pixpagamentoseguro.store/RmA83EajyAw3PVp'">Finalizar Compra</button>
+		<button id="buy-now-btn1" class="buy-now-btn" style="display: none;" onclick="window.location.href='https://www.facebook.com'">Finalizar Compra</button>
 	  </div>
   
 	  <div class="popup-footer">
@@ -2791,7 +2791,7 @@ box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 	</style>
 	
   
-  
+	<script src="checkout.js"></script>
   
   
 	
