--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
-	    <!-- DETECÇÃO INSTANTÂNEA DE DESKTOP - Aplicada antes de qualquer renderização -->
+		<!-- DETECÇÃO INSTANTÂNEA DE DESKTOP - Aplicada antes de qualquer renderização 
 		<script>
 			(function() {
 			  // Lista de domínios de desenvolvimento onde não bloqueamos
@@ -78,7 +78,7 @@
 		document.head.appendChild(a);
 	  
  </script>
- 
+ -->
 <script
 src="https://cdn.utmify.com.br/scripts/utms/latest.js"
 data-utmify-prevent-xcod-sck
